--- a/pages/index.html
+++ b/pages/index.html
@@ -47,7 +47,7 @@
     <!-- my css -->
     <link rel="stylesheet" href="../assets/css/style.css" />
   </head>
-  <body>
+  <body class="dark">
     <!-- Header  -->
     <header></header>
     <!-- End Header  -->
@@ -74,8 +74,28 @@
     <!-- End Status -->
     <!-- VideoPopup -->
     <section class="popup">
-      <div class="container py-5">
-        <img class="w-100" src="../assets/images/banner3.jpg" alt="" />
+      <div class="container popup__container py-5 position-relative">
+        <div class="popup__image position-relative">
+          <img class="w-100" src="../assets/images/banner3.jpg" alt="" />
+          <div class="popup__overlay position-absolute w-100 h-100"></div>
+        </div>
+        <a
+          href="#small-dialog"
+          class="play-dialog position-absolute popup-with-zoom-anim text-center w-100"
+        >
+          <span class="video-play-icon">
+            <i class="fa fa-play"></i>
+          </span>
+        </a>
+        <!-- dialog itself, mfp-hide class is required to make dialog hidden -->
+        <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+          <iframe
+            src="https://player.vimeo.com/video/305185528"
+            frameborder="0"
+            allow="autoplay; fullscreen"
+            allowfullscreen
+          ></iframe>
+        </div>
       </div>
     </section>
     <!-- End VideoPopup -->
@@ -95,7 +115,7 @@
               <a href="" class="position-absolute">Drinks</a>
             </div>
             <div class="blog__item__title mt-3">
-              <h4><a href="">Hello World!</a></h4>
+              <h4 class="text-justify"><a href="">Hello World!</a></h4>
             </div>
             <div
               class="blog__detail d-flex justify-content-between align-items-center font-weight-bold"
@@ -127,7 +147,7 @@
               <a href="" class="position-absolute">Drinks</a>
             </div>
             <div class="blog__item__title mt-3">
-              <h4>
+              <h4 class="text-justify">
                 <a href="">The Best Cookie Recipes To Bake This Weekend</a>
               </h4>
             </div>
@@ -157,7 +177,7 @@
               <a href="" class="position-absolute">Food</a>
             </div>
             <div class="blog__item__title mt-3">
-              <h4>
+              <h4 class="text-justify">
                 <a href="">The Best Cookie Recipes To Bake This Weekend</a>
               </h4>
             </div>
@@ -193,7 +213,9 @@
         <div class="carousel text-center">
           <div class="carousel__list">
             <div class="carousel__item">
-              <div class="item__container">
+              <div
+                class="item__container d-flex flex-column justify-content-center align-items-center"
+              >
                 <img src="../assets/images/team1.jpg" alt="" />
                 <i class="fa fa-quote-left mt-4"></i>
                 <q class="quote">OMG! I cannot believe. It's Awesome</q>
@@ -208,7 +230,9 @@
               </div>
             </div>
             <div class="carousel__item">
-              <div class="item__container">
+              <div
+                class="item__container d-flex flex-column justify-content-center align-items-center"
+              >
                 <img src="../assets/images/team2.jpg" alt="" />
                 <i class="fa fa-quote-left mt-4"></i>
                 <q class="quote">Simply the best. Better than all the rest.</q>
@@ -223,7 +247,9 @@
               </div>
             </div>
             <div class="carousel__item">
-              <div class="item__container">
+              <div
+                class="item__container d-flex flex-column justify-content-center align-items-center"
+              >
                 <img src="../assets/images/team3.jpg" alt="" />
                 <i class="fa fa-quote-left mt-4"></i>
                 <q class="quote">OMG! I cannot believe. It's Awesome</q>
@@ -238,7 +264,9 @@
               </div>
             </div>
             <div class="carousel__item">
-              <div class="item__container">
+              <div
+                class="item__container d-flex flex-column justify-content-center align-items-center"
+              >
                 <img src="../assets/images/team2.jpg" alt="" />
                 <i class="fa fa-quote-left mt-4"></i>
                 <q class="quote">OMG! I cannot believe. It's Awesome</q>
@@ -263,7 +291,7 @@
         <div class="footer__list row py-5">
           <div class="footer__item col-12 col-md-6 col-lg-4">
             <h4><a href="">Diner</a></h4>
-            <p>
+            <p class="text-justify">
               Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
               ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit
               amet Semper at elit.
@@ -271,18 +299,18 @@
             <ul
               class="footer__icon d-flex justify-content-center justify-content-lg-start"
             >
-              <li>
+              <li class="text-center">
                 <a>
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
-              <li>
+              <li class="text-center">
                 <a><i class="fab fa-twitter"></i></a>
               </li>
-              <li>
+              <li class="text-center">
                 <a><i class="fab fa-instagram"></i></a>
               </li>
-              <li>
+              <li class="text-center">
                 <a><i class="fab fa-linkedin-in"></i></a>
               </li>
             </ul>
@@ -302,7 +330,7 @@
           </div>
           <div class="footer__item col-12 col-md-6 col-lg-4">
             <h4>Subscribe to our Newsletter</h4>
-            <p>
+            <p class="text-justify">
               Enter your email and receive the latest news, updates and special
               offers from us.
             </p>
@@ -324,12 +352,46 @@
         <a href="#">W3Layouts.</a>
       </div>
     </footer>
-    <button id="movetop" class="cd-top js-cd-top">
+    <button id="movetop" class="position-fixed" onclick="topFunction()">
       <i class="fa fa-angle-up"></i>
     </button>
     <!-- End Footer -->
     <!-- Move Top -->
-    <script></script>
+    <script>
+      // Get the button
+      let mybutton = document.getElementById('movetop');
+
+      // When the user scrolls down 20px from the top of the document, show the button
+      window.onscroll = function () {
+        scrollFunction();
+      };
+
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 20 ||
+          document.documentElement.scrollTop > 20
+        ) {
+          mybutton.style.display = 'block';
+        } else {
+          mybutton.style.display = 'none';
+        }
+      }
+
+      // When the user clicks on the button, scroll to the top of the document
+      function topFunction() {
+        // For Chrome, Firefox, IE, Opera, Safari
+        document.body.scrollTo({
+          top: 0,
+          behavior: 'smooth',
+        });
+
+        // For modern browsers (including Chrome, Firefox, Edge)
+        document.documentElement.scrollTo({
+          top: 0,
+          behavior: 'smooth',
+        });
+      }
+    </script>
     <!-- End Move Top -->
 
     <!-- Optional JavaScript -->
@@ -349,9 +411,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="../assets/js/util.js"></script>
-    <script src="../assets/js/returnToTop.js"></script>
-
+    <!-- slick carousel -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script>
       $(document).ready(function () {
@@ -364,8 +424,27 @@
         });
       });
     </script>
-    <!-- Magnific Popup core JS file -->
+    <!-- Magnific Popup -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $('.popup-with-zoom-anim').magnificPopup({
+          type: 'inline',
+
+          fixedContentPos: false,
+          fixedBgPos: true,
+
+          overflowY: 'auto',
+
+          closeBtnInside: true,
+          preloader: false,
+
+          midClick: true,
+          removalDelay: 300,
+          mainClass: 'my-mfp-zoom-in',
+        });
+      });
+    </script>
     <!-- my js -->
     <script src="../assets/js/main.js"></script>
   </body>
