Done section 9-10-11-12 tasks

--- a/pages/index.html
+++ b/pages/index.html
@@ -47,7 +47,7 @@
     <!-- my css -->
     <link rel="stylesheet" href="../assets/css/style.css" />
   </head>
-  <body class="dark">
+  <body>
     <!-- Header  -->
     <header></header>
     <!-- End Header  -->
@@ -127,7 +127,7 @@
                     alt=""
                   />
                 </a>
-                <a href="" style="line-height: 100%">W3Layouts</a>
+                <a href="" class="author">W3Layouts</a>
               </div>
               <a href="" class="read-more">
                 <span>Read More</span>
@@ -161,7 +161,7 @@
                     alt=""
                   />
                 </a>
-                <a href="" style="line-height: 100%">W3Layouts</a>
+                <a href="" class="author">W3Layouts</a>
               </div>
               <a href="" class="read-more">
                 <span>Read More</span>
@@ -191,7 +191,7 @@
                     alt=""
                   />
                 </a>
-                <a href="" style="line-height: 100%">W3Layouts</a>
+                <a href="" class="author">W3Layouts</a>
               </div>
               <a href="" class="read-more">
                 <span>Read More</span>
