--- a/pages/index.html
+++ b/pages/index.html
@@ -291,7 +291,7 @@
       <div class="container">
         <div class="footer__list row py-5">
           <div class="footer__item col-12 col-md-6 col-lg-4">
-            <h4><a href="#">Diner</a></h4>
+            <h4 class="text-white"><a href="#">Diner</a></h4>
             <p class="text-justify">
               Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
               ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit
@@ -317,43 +317,50 @@
             </ul>
           </div>
           <div class="footer__item col-6 col-md-6 col-lg-2">
-            <h4>Categories</h4>
+            <h4 class="text-white">Categories</h4>
             <ul class="row">
               <li class="col-12"><a href="#">Drinks</a></li>
               <li class="col-12"><a href="#">Food</a></li>
             </ul>
           </div>
           <div class="footer__item col-6 col-md-6 col-lg-2">
-            <h4>Archives</h4>
+            <h4 class="text-white">Archives</h4>
             <ul class="row">
               <li class="col-12"><a href="#">March 2021</a></li>
             </ul>
           </div>
           <div class="footer__item col-12 col-md-6 col-lg-4">
-            <h4>Subscribe to our Newsletter</h4>
+            <h4 class="text-white">Subscribe to our Newsletter</h4>
             <p class="text-justify">
               Enter your email and receive the latest news, updates and special
               offers from us.
             </p>
             <div class="subscribe__email">
               <input
+                class="w-100"
                 type="text"
                 name=""
                 id=""
                 placeholder="Your Email Address"
               />
-              <button class="mt-2 w-100 py-3">Subscribe Now</button>
+              <button class="mt-2 w-100 py-3 text-white font-weight-bold">
+                Subscribe Now
+              </button>
             </div>
           </div>
         </div>
       </div>
-      <div class="line"></div>
-      <div class="container py-3 copyright">
+      <div class="line w-100"></div>
+      <div class="container py-3 copyright text-white">
         © 2023 Diner. All Rights Reserved | WordPress Theme by
         <a href="#">W3Layouts.</a>
       </div>
     </footer>
-    <button id="movetop" class="position-fixed d-none" onclick="topFunction()">
+    <button
+      id="movetop"
+      class="position-fixed d-none text-white"
+      onclick="topFunction()"
+    >
       <i class="fa fa-angle-up"></i>
     </button>
     <!-- End Footer -->
