--- a/pages/index.html
+++ b/pages/index.html
@@ -301,18 +301,36 @@
               class="footer__icon d-flex justify-content-center justify-content-lg-start"
             >
               <li class="text-center">
-                <a>
+                <a
+                  href="#"
+                  class="footer__icon-link d-inline-block w-100 h-100"
+                >
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
               <li class="text-center">
-                <a><i class="fab fa-twitter"></i></a>
+                <a
+                  href="#"
+                  class="footer__icon-link d-inline-block w-100 h-100"
+                >
+                  <i class="fab fa-twitter"></i>
+                </a>
               </li>
               <li class="text-center">
-                <a><i class="fab fa-instagram"></i></a>
+                <a
+                  href="#"
+                  class="footer__icon-link d-inline-block w-100 h-100"
+                >
+                  <i class="fab fa-instagram"></i>
+                </a>
               </li>
               <li class="text-center">
-                <a><i class="fab fa-linkedin-in"></i></a>
+                <a
+                  href="#"
+                  class="footer__icon-link d-inline-block w-100 h-100"
+                >
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
               </li>
             </ul>
           </div>
