format code first

--- a/pages/index.html
+++ b/pages/index.html
@@ -122,7 +122,7 @@
     <!-- Banner -->
     <section class="crs">
       <div class="container py-5">
-        <div class="crs_info">
+        <div class="crs_info col-12 col-lg-6">
           <h3>The Only Thing We Love More Than Food Is You!</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, vel.
@@ -149,7 +149,7 @@
               Veritatis nulla exercitationem id facere similique iste dolorem
               voluptatem distinctio, inventore ex! Dolorem commodi quisquam,
               architecto soluta quaerat blanditiis repellendus in officiis.
-              <br>
+              <br />
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
               quisquam temporibus nisi soluta quaerat. Corporis eligendi omnis
               itaque aliquam illum quasi ratione quia ad hic.
