done dark/light theme

--- a/pages/index.html
+++ b/pages/index.html
@@ -67,7 +67,7 @@
               </span>
             </form>
             <button
-              class="btnsunmoon"
+              class="btn btnsunmoon"
               id="switchButton"
               title="Click to switch theme"
             >
