--- a/pages/index.html
+++ b/pages/index.html
@@ -49,7 +49,7 @@
     <!-- my css -->
     <link rel="stylesheet" href="../assets/css/style.css" />
   </head>
-  <body>
+  <body id="myBody">
     <!-- Header  -->
     <header>
       <nav class="navbar navbar-expand-lg">
